tests/NormalTests/paczka1/fuzzy1/51311068.err
Error in line 6: kv5p7A S370 -1,0
Error in line 8: PKvhJTjd S474 112,4
Error in line 4: kv5p7A S370 52,2
Error in line 19: kv5p7A S474 53,7
Error in line 25: teYIGffl S474 29,04
Error in line 22: kv5p7A S648 15,3
Error in line 26: teYIGffl S474 136,4
Error in line 29: GPxH S370 70,0
